tests/errors/empty-bowl.chef
Empty Bowl Test.

This recipe tries to fold from an empty mixing bowl.

Ingredients.
100 g sugar

Method.
Fold sugar into mixing bowl.

Serves 1.
